@@ -1,6 +1,6 @@
 module ActionView
   module Helpers #:nodoc:
-    # Provides methods for converting a numbers into formatted strings.
+    # Provides methods for converting numbers into formatted strings.
     # Methods are provided for phone numbers, currency, percentage,
     # precision, positional notation, and file size.
     module NumberHelper
